Fixed CSS layout issues

--- a/css/skin.css
+++ b/css/skin.css
@@ -476,22 +476,20 @@ padding:0 10px;
  margin-left:200px;
 }
 
-#loading
-{
-width: 100%;
-position: absolute;
+#loading {
+ width: 100%;
+ position: absolute;
 }
-#pagination li
-{
-padding:5px;
-margin:2px;
-list-style: none;
-float: left;
-border:solid 1px #dddddd;
-color:#0063DC;
+#pagination{clear:both;}
+#pagination li {
+ padding:5px;
+ margin:2px;
+ list-style: none;
+ float: left;
+ border:solid 1px #dddddd;
+ color:#0063DC;
 }
-#pagination li:hover
-{
-color:#FF0084;
-cursor: pointer;
+#pagination li:hover {
+ color:#FF0084;
+ cursor: pointer;
 }
